[gd_scene load_steps=2 format=3 uid="uid://c0yi4y2hmt7bt"]

[ext_resource type="Script" uid="uid://vfvi2jy4sh0h" path="res://scripts/pause_menu/save_panel.gd" id="1_q0vgn"]

[node name="SavePanel" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_right = 497.0
offset_bottom = 106.0
script = ExtResource("1_q0vgn")

[node name="LoadButton" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 91.0
text = "加载"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 400.0
offset_top = 16.0
offset_right = 475.0
offset_bottom = 91.0
text = "删除"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 101.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 94.0

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "玩家昵称"

[node name="OtherInfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "其他信息"

[connection signal="button_down" from="LoadButton" to="." method="_on_load_button_down"]
[connection signal="button_down" from="DeleteButton" to="." method="_on_delete_button_down"]
